--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main></main>
 
     <div class="overlay">
-      <button onclick="myfunc()" class="button" id="revealBtn">Click to Feel</button>
+      <button onclick="myfunc()" class="button" id="revealBtn">If you click, you’ll hear my heart</button>
 
       <div class="para" id="paraBox" style="display: none;">
         <p class="p1" id="typedText"></p>
